Icons: IE fix caused icons to be a little too large

--- a/source/sass/components/_icons.scss
+++ b/source/sass/components/_icons.scss
@@ -16,17 +16,14 @@
   }
 
   &.fa-fw svg {
-    height: 1.25em;
     width: 1.25em;
   }
 
   &.fa-2x svg {
-    height: 2em;
     font-size: 2em;
   }
 
   &.fa-3x svg {
-    height: 3em;
     font-size: 3em;
   }
 
